# Benchmark-IRIF

./: .gitignore  README.md  analyse_sag.sh  analyse_uppaal.sh  benchmark.sh  exec.sh  parse_waters.sh
rt_to_xta/: dune-project  xta.txt
rt_to_xta/lib/: dune
scrypt/: analyze.py  parse.py  parseWaters.py
systems_generation/: .gitignore  dune-project
systems_generation/lib/ast/: dune  system_utils.ml
systems_generation/lib/generator/: dune  rnd_sys1.ml  rnd_sys2.ml  scheduability_test.ml  seg_generator.ml  sys_generator.ml  tsk_generator.ml  waters.ml  waters1.ml  waters2.ml  waters_sag.ml
systems_generation/lib/sy_to_in_format/: dune  lexer.mll  parser.mly
systems_generation/lib/translator/: dune  queries.ml  translation.ml  write_out.ml
