(lang dune 3.15)
(using menhir 3.0)

(name systems_generation)

(generate_opam_files true)

(source
 (github SamyB2/Benchmark-IRIF))

(authors "SamyB2")

(maintainers "SamyB2")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name systems_generation)
 (synopsis "System generation for verfification based on various parameters")
 (description "Check the README file for more details")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
